Integrate both docs, plus copyedit